--- a/reporting-for-desktop/toc.yml
+++ b/reporting-for-desktop/toc.yml
@@ -222,6 +222,8 @@ items:
         href: articles/report-designer/report-designer-for-winforms/use-report-elements/use-bar-codes/postnet.md
       - name: QR Code
         href: articles/report-designer/report-designer-for-winforms/use-report-elements/use-bar-codes/qr-code.md
+      - name: Micro QR Code
+        href: articles/report-designer/report-designer-for-winforms/use-report-elements/use-bar-codes/micro-qr-code.md
       - name: GS1 QR Code
         href: articles/report-designer/report-designer-for-winforms/use-report-elements/use-bar-codes/gs1-qr-code.md
       - name: EPC QR Code
