--- a/reporting-for-web/toc.yml
+++ b/reporting-for-web/toc.yml
@@ -193,6 +193,8 @@ items:
         href: articles/report-designer/use-report-elements/use-bar-codes/add-bar-codes-to-a-report.md
       - name: Barcode Recognition Specifics
         href: articles/report-designer/use-report-elements/use-bar-codes/bar-code-recognition-specifics.md
+      - name: Aztec Code
+        href: articles/report-designer/use-report-elements/use-bar-codes/aztec-code.md
       - name: Codabar
         href: articles/report-designer/use-report-elements/use-bar-codes/codabar.md
       - name: Code 11 (USD-8)
