--- a/reporting-for-desktop/toc.yml
+++ b/reporting-for-desktop/toc.yml
@@ -172,6 +172,8 @@ items:
         href: articles/report-designer/report-designer-for-winforms/use-report-elements/use-bar-codes/add-bar-codes-to-a-report.md
       - name: Barcode Recognition Specifics
         href: articles/report-designer/report-designer-for-winforms/use-report-elements/use-bar-codes/bar-code-recognition-specifics.md
+      - name: Aztec Code
+        href: articles/report-designer/report-designer-for-winforms/use-report-elements/use-bar-codes/aztec-code.md
       - name: Codabar
         href: articles/report-designer/report-designer-for-winforms/use-report-elements/use-bar-codes/codabar.md
       - name: Code 11 (USD-8)
@@ -222,6 +224,8 @@ items:
         href: articles/report-designer/report-designer-for-winforms/use-report-elements/use-bar-codes/postnet.md
       - name: QR Code
         href: articles/report-designer/report-designer-for-winforms/use-report-elements/use-bar-codes/qr-code.md
+      - name: Micro QR Code
+        href: articles/report-designer/report-designer-for-winforms/use-report-elements/use-bar-codes/micro-qr-code.md
       - name: GS1 QR Code
         href: articles/report-designer/report-designer-for-winforms/use-report-elements/use-bar-codes/gs1-qr-code.md
       - name: EPC QR Code
