add expression and filter editor

--- a/eud-for-bi-dashboards/dashboard-for-desktop/toc.yml
+++ b/eud-for-bi-dashboards/dashboard-for-desktop/toc.yml
@@ -507,6 +507,18 @@ items:
       href: dashboard-designer/ui-elements/data-source-browser.md
     - name: Data Items Pane
       href: dashboard-designer/ui-elements/data-items-pane.md
+    - name: Expression Editor
+      href: dashboard-designer/ui-elements/expression-editor.md
+      items:
+      - name: Expression Operators, Functions and Constants
+        href: dashboard-designer/ui-elements/expression-editor/expression-operators-functions-and-constants.md
+    - name: Filter Editor
+      href: dashboard-designer/ui-elements/filter-editor.md
+      items:
+      - name: Filter Data via the Filter Editor
+        href: dashboard-designer/ui-elements/filter-editor/filter-data-via-the-filter-editor.md
+      - name: Examples of Using the Filter Editor
+        href: dashboard-designer/ui-elements/filter-editor/examples-of-using-the-filter-editor.md
     - name: Print Preview
       href: dashboard-designer/ui-elements/print-preview.md
     - name: Dashboard Surface
