--- a/toc.yml
+++ b/toc.yml
@@ -2,6 +2,6 @@ items:
 - name: End-User Documentation for DevExpress Reports
   href: eud-for-devexpress-reports/
   topicHref: eud-for-devexpress-reports/end-user-documentation-for-devexpress-reports.md
-- name: End-User Documentation for BI Dashboards
+- name: End-User Documentation for DevExpress BI Dashboard
   href: eud-for-bi-dashboard/
   topicHref: eud-for-bi-dashboard/end-user-documentation-for-bi-dashboard.md
